--- a/Doker/2_CompilarPrimerApi/application/pom.xml
+++ b/Doker/2_CompilarPrimerApi/application/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.1.RELEASE</version>
+        <version>2.7.18-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.application</groupId>
@@ -15,7 +15,7 @@
     <description>A simple application to use with docker</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
