--- a/Doker/3_CompilarApiMovie/cineflux/src/main/resources/application.properties
+++ b/Doker/3_CompilarApiMovie/cineflux/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+# dev properties
+spring.r2dbc.url=r2dbc:pool:mysql://${DATABASE_HOST:localhost}:${DATABASE_PORT:3306}/${DATABASE_NAME:database}?zeroDateTimeBehavior=convertToNull&useSSL=false&useServerPrepareStatement=true
+spring.r2dbc.username=${DATABASE_USERNAME:root}
+spring.r2dbc.password=${DATABASE_PASSWORD:password}
+
 logging.level.org.springframework.data.repository=INFO
 logging.level.org.springframework.r2dbc.core=INFO
-spring.r2dbc.url=r2dbc:pool:mysql://172.17.0.2:3306/mysqldb?zeroDateTimeBehavior=convertToNull&useSSL=false&useServerPrepareStatement=true
-spring.r2dbc.username=root
-spring.r2dbc.password=pass
-spring.r2dbc.initialization-mode=always
-
+# application
+spring.application.name=cineflux
+server.port=7070
